# opaque-wasm

./: .gitignore  Cargo.toml  Justfile  README.md  deny.toml
.github/workflows/: main.yml
client/: Cargo.toml  README.md
client/src/: lib.rs  login.rs  registration.rs
core/: Cargo.toml
core/src/: lib.rs
example/: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  server.js  vite.config.js
example/src/: client.js  style.css
server/: Cargo.toml  README.md
server/src/: lib.rs  login.rs  registration.rs  server.rs
src/: cipher.rs  client_login.rs  client_registration.rs  lib.rs  server.rs  server_login.rs  server_registration.rs
