[package]
name = "opaque-wasm-core"
version = "0.1.0"
authors = ["Cynthia <cyyynthia@borkenware.com>"]
repository = "https://github.com/squirrelchat/opaque-wasm"
description = "WebAssembly wrapper for facebook/opaque-ke (shared lib)"
license = "BSD-3-Clause"

rust-version = "1.65"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
opaque-ke = { version = "3.0.0-pre.2", default-features = false, features = ["ristretto255-voprf", "argon2"] }
argon2 = { version = "0.5", default-features = false, features = ["alloc"] }
